Configured entity models in the Infrastructure

--- a/duka/duka.csproj
+++ b/duka/duka.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Duka.Domain\Duka.Domain.csproj" />
+    <ProjectReference Include="..\Duka.Infrastructure\Duka.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
